# labs

./: .gitignore  .~lock.отчет ППвИС 1.docx#  .~lock.отчет ППвИС 2.docx#  README.md  temp.xml  temp2.xml  отчет ППвИС 1.docx
AOIS/AOIS_1/: CMakeLists.txt  main.cpp
AOIS/AOIS_2/: CMakeLists.txt  main.cpp
AOIS/AOIS_3/: CMakeLists.txt  main.cpp
AOIS/AOIS_4/: CMakeLists.txt  main.cpp
AOIS/AOIS_5/: CMakeLists.txt  main.cpp
AOIS/AOIS_6/: CMakeLists.txt  main.cpp
AOIS/AOIS_7/: CMakeLists.txt  main.cpp
AOIS/AOIS_8/: CMakeLists.txt  main.cpp
Client/: settings.properties
MRZvIS/MRZVIS_2/: CMakeLists.txt
MRZvIS/MRZvIS_2/: CMakeLists.txt  README.md  main.cpp
PPVIS/: PPVIS.md
PPVIS/sem1/PPVIS_lb2/: CMakeLists.txt  Economics.cpp  Economics.h  Informatics.cpp  Informatics.h  Mathematics.cpp  Mathematics.h  NaturalScience.cpp  NaturalScience.h  Psychology.cpp  Psychology.h  Science.cpp  Science.h  SocialScience.cpp  SocialScience.h  TechnicalScience.cpp  TechnicalScience.h  main.cpp
PPVIS/sem3/: Diary.odt
Server/Tables/: name.xml  temp1.xml  temp2.xml
TIIT_sem2/: README.md
TIIT_sem2/independent_work/: 2.gwf  kbe_iw.pdw
src/sample/: Brush.java  Controller.java  DOMxmlWriter.java  Ellipse.java  Eraser.java  Events.java  Line.java  Magnifier.java  Main.java  MenuPaint.java  ModalWindowAdd.java  ModalWindowDelete.java  ModalWindowSearch.java  Model.java  Pencil.java  RectSelection.java  Rectangle.java  SAXXmlReader.java  Sportsman.java  Text.java  Tool.java  ToolBarPaint.java  ToolBrush.java  ToolRectangle.java  Toolbar.java  View.java  sample.fxml
(+141 files in other folders)
